--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "prettier": "2.8.7"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
+    "mongoose": "^7.0.3"
   }
 }
