--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "PCAT Photo App",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,8 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "method-override": "^3.0.0",
     "mongoose": "^7.0.3"
   }
 }
